# ml-rest-api-caching

./: .cache.env  Makefile  README.md  pyproject.toml  redis.yml
src/: api.py  cache.py  client.py  predictor.py
